PINZ-133: added statistics-service with Redis Streams consumer, gRPC, Helm chart and gateway REST
